--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,28 +10,19 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: 
+      - "**"
 
 jobs:
-  build:
-
+  build_and_test: 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Remove Chrome
-      run: sudo apt purge google-chrome-stable
-    - name: Remove default Chromium
-      run: sudo apt purge chromium-browser
-    - name: Install a new Chromium
-      run: sudo apt install -y chromium-browser
-    - name: Build with Maven
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v2
+      with: 
+        distribution: 'zulu'
+        java-version: 16
+    - name: Run tests with maven
+      working-directory: webdriver_java
       run: mvn test -PRegression
