--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,3 +25,8 @@ jobs:
         java-version: 16
     - name: Run tests with maven
       run: mvn test -PRegression -DbrowserName=chromeheadless
+    - name: Deploy pages
+      uses: JamesIves/github-pages-deploy-action@v4.5.0
+      with:
+        branch: gh-pages
+        folder: ./reports
