--- a/.github/workflows/chrome.yml
+++ b/.github/workflows/chrome.yml
@@ -24,8 +24,7 @@ jobs:
         distribution: 'zulu'
         java-version: 16
     - name: Run Tests
-      run: |
-       google-chrome --user-data-dir=$(mktemp -d)  
+      run: google-chrome --no-sandbox --disable-gpu --disable-dev-shm-usage --user-data-dir=$(mktemp -d) 
     - name: Run tests with maven
       run: mvn test -PRegression -DbrowserName=chrome
     - name: Upload Extent Report as Artifact
