--- a/.github/workflows/chrome.yml
+++ b/.github/workflows/chrome.yml
@@ -23,8 +23,14 @@ jobs:
       with: 
         distribution: 'zulu'
         java-version: 16
-    - name: Run Tests
-      run: google-chrome --no-sandbox --disable-gpu --disable-dev-shm-usage --user-data-dir=$(mktemp -d) 
+    - name: Install Xvfb
+      run: sudo apt-get update && sudo apt-get install -y xvfb
+    - name: Start Xvfb
+      run: Xvfb :99 -screen 0 1920x1080x24 & echo "Xvfb started"
+    - name: Set DISPLAY Environment Variable
+      run: echo "DISPLAY=:99" >> $GITHUB_ENV
+    - name: Run Chrome with GUI
+      run: google-chrome --no-sandbox --disable-gpu --disable-dev-shm-usage --user-data-dir=$(mktemp -d)
     - name: Run tests with maven
       run: mvn test -PRegression -DbrowserName=chrome
     - name: Upload Extent Report as Artifact
