--- a/.github/workflows/chrome.yml
+++ b/.github/workflows/chrome.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Run tests with maven
       run: mvn test -PRegression -DbrowserName=chrome
     - name: Upload Extent Report as Artifact
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: Extent-Report
