--- a/.github/workflows/chrome.yml
+++ b/.github/workflows/chrome.yml
@@ -10,38 +10,55 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: 
+    branches:
       - "**"
 
 jobs:
-  build_and_test: 
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v2
-      with: 
-        distribution: 'zulu'
-        java-version: 16
-    - name: Install Xvfb
-      run: sudo apt-get update && sudo apt-get install -y xvfb
-    - name: Start Xvfb
-      run: Xvfb :99 -screen 0 1920x1080x24 & echo "Xvfb started"
-    - name: Set DISPLAY Environment Variable
-      run: echo "DISPLAY=:99" >> $GITHUB_ENV
-    - name: Run tests with maven
-      run: mvn test -PRegression -DbrowserName=chrome
-    - name: Upload Extent Report as Artifact
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: Extent-Report
-        path: reports/
-    - name: Deploy Extent Report to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-          branch: gh-pages  # The branch to deploy the report to
-          folder: reports/  # The folder that contains the report (adjust if needed)
-          file_scope: extent-report.html  # Name of the HTML report file (adjust as needed)
-          token: ${{ secrets.GITHUB_TOKEN }}  # Automatically generated token for authentication
-          clean: true
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: 16
+
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y wget curl unzip
+        
+        # Install Chrome
+      - name: Install Google Chrome
+        run: |
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install ./google-chrome-stable_current_amd64.deb
+        
+        # Install ChromeDriver
+      - name: Install ChromeDriver
+        run: |
+          CHROME_VERSION=$(google-chrome-stable --version | awk '{print $3}')
+          wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          
+          # Set up X virtual framebuffer (Xvfb) to enable GUI mode
+          - name: Install Xvfb
+            run: sudo apt-get install -y xvfb
+          
+          # Run the tests
+          - name: Run Selenium tests
+            run: |
+              # Start Xvfb to simulate a display
+              Xvfb :99 -screen 0 1920x1080x24 &
+              
+              # Set the DISPLAY environment variable
+              export DISPLAY=:99
+              
+              # Run Maven tests
+              mvn test -PRegression
+      - name: Upload Extent Report as Artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: Extent-Report
+          path: reports/
