--- a/.github/workflows/chrome.yml
+++ b/.github/workflows/chrome.yml
@@ -26,13 +26,13 @@ jobs:
 
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y wget curl unzip
-        
+
         # Install Chrome
       - name: Install Google Chrome
         run: |
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install ./google-chrome-stable_current_amd64.deb
-        
+
         # Install ChromeDriver
       - name: Install ChromeDriver
         run: |
@@ -42,23 +42,33 @@ jobs:
           sudo mv chromedriver /usr/local/bin/
           
           # Set up X virtual framebuffer (Xvfb) to enable GUI mode
-          - name: Install Xvfb
-            run: sudo apt-get install -y xvfb
+      - name: Install Xvfb
+        run: sudo apt-get install -y xvfb
+        
+        # Run the tests
+      - name: Run Selenium tests
+        run: |
+          # Start Xvfb to simulate a display
+          Xvfb :99 -screen 0 1920x1080x24 &
           
-          # Run the tests
-          - name: Run Selenium tests
-            run: |
-              # Start Xvfb to simulate a display
-              Xvfb :99 -screen 0 1920x1080x24 &
-              
-              # Set the DISPLAY environment variable
-              export DISPLAY=:99
-              
-              # Run Maven tests
-              mvn test -PRegression
+          # Set the DISPLAY environment variable
+          export DISPLAY=:99
+          
+          # Run Maven tests
+          mvn clean test -Dtest=YourTestClassName  # Specify your test class here
+      - name: Run tests with maven
+        run: mvn test -PRegression -DbrowserName=chrome
       - name: Upload Extent Report as Artifact
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: Extent-Report
           path: reports/
+      - name: Deploy Extent Report to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages  # The branch to deploy the report to
+          folder: reports/  # The folder that contains the report (adjust if needed)
+          file_scope: extent-report.html  # Name of the HTML report file (adjust as needed)
+          token: ${{ secrets.GITHUB_TOKEN }}  # Automatically generated token for authentication
+          clean: true
