--- a/.github/workflows/headless.yml
+++ b/.github/workflows/headless.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Run tests with maven
       run: mvn test -PRegression -DbrowserName=chromeheadless
     - name: Upload Extent Report as Artifact
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: extent-report
